Ano už to mám hotové

--- a/A M O G U S/IMPOSTOR_FALSE.html
+++ b/A M O G U S/IMPOSTOR_FALSE.html
@@ -9,5 +9,6 @@
 <body>
     <audio src="Sounds/AMOGUS_voting_sound.mp3" autoplay loop></audio>
     <img src="Gifs/FALSEImpostor.gif">
+    BEN
 </body>
 </html>
