--- a/A M O G U S/IMPOSTOR_TRUE.html
+++ b/A M O G U S/IMPOSTOR_TRUE.html
@@ -9,5 +9,6 @@
 <body>
     <audio src="Sounds/AMOGUS_voting_sound.mp3" autoplay></audio>
     <img src="Gifs/TRUEImpostor.gif">
+    bezdak ben
 </body>
 </html>
