--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -13,11 +13,13 @@
         </nav>
         <h1><pre>A      M      O      N      G      U      S</pre></h1>
     </header>
-
     <main>
-
+        <p class="introducing-text">AMONG US je sociální dedukční hra pro  4-15 hráčůs kdy každý z hráčů převezme náhodně jednu z rolí, a to buď podvodníka, nebo člena posádky.
+            Cílem posádky je splnit všechny požadované úkoly a odstranit podvodníky pryč jejím hlasováním, a tím přežít.
+            Cílem podvodníků je zavraždit všechny členy posádky a také může sabotovat jejich úkoly.
+        </p>
+        <p class="gameplay-text"></p>
     </main>
-
     <footer>
         <h2>Copyright 2023</h2>
         <h2>Šimon Frőmel, 2.E</h2>
