ANO provedl jsem změnu

--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -21,7 +21,7 @@
         <p class="gameplay-text"></p>
     </main>
     <footer>
-        <h2>Copyright 2023</h2>
+        <h2>Copyright 2023 BEN?</h2>
         <h2>Šimon Frőmel, 2.E</h2>
     </footer>
 </body>
