--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -11,17 +11,46 @@
         <nav>
             <a href="HOME.html"><img src="Images/LilAmogus.png"></a>
         </nav>
-        <h1><pre>A      M      O      N      G      U      S</pre></h1>
+        <h1><pre>H  R  A       A   M   O   N   G   U   S</pre></h1>
     </header>
     <main>
-        <p class="introducing-text">AMONG US je sociální dedukční hra pro  4-15 hráčůs kdy každý z hráčů převezme náhodně jednu z rolí, a to buď podvodníka, nebo člena posádky.
-            Cílem posádky je splnit všechny požadované úkoly a odstranit podvodníky pryč jejím hlasováním, a tím přežít.
-            Cílem podvodníků je zavraždit všechny členy posádky a také může sabotovat jejich úkoly.
+        <p class="introducing-text">
+            AMONG US je sociální dedukční hra pro  4-15 hráčůs kdy každý z hráčů převezme náhodně jednu z rolí, a to buď podvodníka, nebo člena posádky.
         </p>
+        <div>
+            <ul>Cílem posádky je splnit všechny požadované úkoly a odstranit podvodníky pryč jejím hlasováním, a tím přežít.</ul>
+            <ul>Cílem podvodníků je zavraždit všechny členy posádky a také může sabotovat jejich úkoly.</ul>
+        </div>    
+       
+        
+        <div>
+            <h2>Benefity hraní Among us</h2>
+            <div>
+                <ul>Vznik mnohočetné osobnosti</ul>
+                <ul>Schopnost výborné dedukce</ul>
+                <ul>Porozumění rozdílu mezi slovy argumenty a ambice</ul>
+                <ul>Připojení do sekty AMOGŮ věřící v boha AMOGAS</ul>
+            </div>
+            <h2>Rizika hraní hry AMOGUS</h2>
+            <div>Nakažení velice nebezpečnou a zařím nevyléčitelnou nemoci SUSTED</div>
+            <h2>Symptomy nemoci [SUSTED]</h2>
+            <div>
+                Jedinec ukazuje prstem na vše a přitom řve: "S U S".
+                Jedincův strach se zvyšuje když je v kontaktu s červenou barvou.
+                Jedinec nepředvídatelně vykřikuje tato slovní spojení: "On se vetnul!", "To je SUS!", "Já nejsem SUS" a "Nemáš ambice!"
+            </div>
+            <p>
+                Pokud se vám podobá alespoň jediný syptom, nebo si nejste zcela jisti,
+                tak se prosím obraťte na svého doktora pro konzultaci. Pokud jste si všiml podobného chování ve Vašem okolí,
+                tak prosím neodkladně informujte polici, tato osoba je velice nebezpečná a nakažlivá, vyhýbejte se ji za kažkou cenu.
+            </p>
+        </div>
+
+
         <p class="gameplay-text"></p>
     </main>
     <footer>
-        <h2>Copyright 2023 BEN?</h2>
+        <h2>Copyright 2023</h2>
         <h2>Šimon Frőmel, 2.E</h2>
     </footer>
 </body>
