--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -11,16 +11,40 @@
         <nav>
             <a href="HOME.html"><img src="Images/LilAmogus.png"></a>
         </nav>
-        <h1><pre>H  R  A       A   M   O   N   G   U   S</pre></h1>
+        <h1><pre>H  R  A         A   M   O   N   G         U   S</pre></h1>
     </header>
     <main>
-        <p class="introducing-text">
-            AMONG US je sociální dedukční hra pro  4-15 hráčůs kdy každý z hráčů převezme náhodně jednu z rolí, a to buď podvodníka, nebo člena posádky.
-        </p>
-        <div>
-            <ul>Cílem posádky je splnit všechny požadované úkoly a odstranit podvodníky pryč jejím hlasováním, a tím přežít.</ul>
-            <ul>Cílem podvodníků je zavraždit všechny členy posádky a také může sabotovat jejich úkoly.</ul>
-        </div>    
+        <div class="slogan">
+            <span>
+                <span>Odhalte zrádce, ochrantě posádku</span>
+                Ve světě Among Us, plném nebezpečí a věčné nedůvěry, musíte najít odvahu spoléhat se na ostatní, abyste odhalili zrádce a ochránili svou posádku před temnými intrikami.
+            </span>
+        </div>
+        <div class="introduction">
+            <div class="short-description">
+                <span>   
+                    Among Us je populární sociální dedukční hra, která je určena pro skupiny hráčů
+                    o počtu 4-15. Ve hře je každému hráči náhodně přidělena role podvodníka, nebo role člena posádky.
+                </span>
+                <ul>
+                    <li>
+                        Podvodníci mají za úkol zůstat utajeni a sabotovat úkoly posádky.
+                        Jejich cílem je zavraždit všechny členy posádky v utajení.
+                        Musí strategicky plánovat své útoky a zároveň se vyhýbat podezření ostatních hráčů.
+                    </li>
+                    <li>
+                        Členové posádky mají za úkol vykonat všechny požadované úkoly na lodi a odhalit podvodníky.
+                        Aby přežili, musí spolupracovat, komunikovat a hlasovat o podezřelých hráčích na základě pozorování a dedukce.
+                        Důvěra mezi členy posádky je klíčová k vítězství
+                    </li>
+                </ul>
+                <span>
+                    Among Us je napínavá hra plná tajemství, podezření a strategie, která vyžaduje dobré deduktivní schopnosti a
+                    schopnost spolupracovat s ostatními hráči.
+                </span>
+            </div>
+                <img src="Images/among-us-theme.jpg">
+        </div>
        
         
         <div>
