--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -15,38 +15,53 @@
     </header>
     <main>
         <div class="slogan">
-            <span>
+            <p>
                 <span>Odhalte zrádce, ochrantě posádku</span>
                 Ve světě Among Us, plném nebezpečí a věčné nedůvěry, musíte najít odvahu spoléhat se na ostatní, abyste odhalili zrádce a ochránili svou posádku před temnými intrikami.
-            </span>
+            </p>
         </div>
-        <div class="introduction">
-            <div class="short-description">
-                <span>   
-                    Among Us je populární sociální dedukční hra, která je určena pro skupiny hráčů
+        <div class="about-part">
+            <div class="about-text">
+                <p>   
+                    <span class="red">Among Us je populární sociální dedukční hra,</span> která je určena pro skupiny hráčů
                     o počtu 4-15. Ve hře je každému hráči náhodně přidělena role podvodníka, nebo role člena posádky.
-                </span>
+                </p>
                 <ul>
                     <li>
-                        Podvodníci mají za úkol zůstat utajeni a sabotovat úkoly posádky.
-                        Jejich cílem je zavraždit všechny členy posádky v utajení.
+                        <span class="red">Podvodníci mají za úkol zůstat utajeni a sabotovat úkoly posádky.</span>
+                        Jejich cílem je zavraždit všechny členy posádky a nebýt chyceni.
                         Musí strategicky plánovat své útoky a zároveň se vyhýbat podezření ostatních hráčů.
                     </li>
                     <li>
-                        Členové posádky mají za úkol vykonat všechny požadované úkoly na lodi a odhalit podvodníky.
+                        <span class="red">Členové posádky mají za úkol vykonat všechny požadované úkoly na lodi a odhalit podvodníky.</span>
                         Aby přežili, musí spolupracovat, komunikovat a hlasovat o podezřelých hráčích na základě pozorování a dedukce.
                         Důvěra mezi členy posádky je klíčová k vítězství
                     </li>
                 </ul>
-                <span>
-                    Among Us je napínavá hra plná tajemství, podezření a strategie, která vyžaduje dobré deduktivní schopnosti a
+                <p>
+                    <span class="red">Among Us je napínavá hra plná tajemství,</span> podezření a strategie, která vyžaduje dobré deduktivní schopnosti a
                     schopnost spolupracovat s ostatními hráči.
-                </span>
+                </p>
             </div>
-                <img src="Images/among-us-theme.jpg">
+            <img src="Images/among-us-theme.jpg">
         </div>
-       
-        
+        <div class="">
+
+        </div>
+        <div class="maps">
+            <div>
+                <h2>Hratelné mapy</h2>
+                <p>
+                    Hra se odehrává na jedné ze čtyř map. Vesmárná loď <a href="MAPS.html">[The Skeld]</a>
+                    základna na planetě <a href="MAPS.html">[Polus]</a>, 
+                    základna v atmosféře Země <a href="MAPS.html">[MIRA HQ]</a>,  
+                    a nejnovější mapě vzducholodi inspirované Henry Stickminem <a href="MAPS.html">[The Airship]</a>.
+                </p>
+            </div>
+        </div>
+
+
+        <!--
         <div>
             <h2>Benefity hraní Among us</h2>
             <div>
@@ -69,9 +84,8 @@
                 tak prosím neodkladně informujte polici, tato osoba je velice nebezpečná a nakažlivá, vyhýbejte se ji za kažkou cenu.
             </p>
         </div>
+        -->
 
-
-        <p class="gameplay-text"></p>
     </main>
     <footer>
         <h2>Copyright 2023</h2>
