--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -14,12 +14,14 @@
         <h1><pre>H  R  A         A   M   O   N   G         U   S</pre></h1>
     </header>
     <main>
+
         <div class="slogan">
             <p>
                 <span>Odhalte zrádce, ochrantě posádku</span>
                 Ve světě Among Us, plném nebezpečí a věčné nedůvěry, musíte najít odvahu spoléhat se na ostatní, abyste odhalili zrádce a ochránili svou posádku před temnými intrikami.
             </p>
         </div>
+
         <div class="about-part">
             <div class="about-text">
                 <p>   
@@ -45,20 +47,51 @@
             </div>
             <img src="Images/among-us-theme.jpg">
         </div>
-        <div class="">
-
-        </div>
-        <div class="maps">
-            <div>
-                <h2>Hratelné mapy</h2>
+        <div class="grid-container">
+            <div class="maps">
+                <h2 class="red">Hratelné mapy</h2>
                 <p>
-                    Hra se odehrává na jedné ze čtyř map. Vesmárná loď <a href="MAPS.html">[The Skeld]</a>
-                    základna na planetě <a href="MAPS.html">[Polus]</a>, 
-                    základna v atmosféře Země <a href="MAPS.html">[MIRA HQ]</a>,  
-                    a nejnovější mapě vzducholodi inspirované Henry Stickminem <a href="MAPS.html">[The Airship]</a>.
+                    Hra se odehrává na jedné ze čtyř map:
                 </p>
+                <a href="MAPS.html"><img src="Images/map-name-skeld.jpg"></a>
+                <a href="MAPS.html"><img src="Images/map-name-polus.png"></a>
+                <a href="MAPS.html"><img src="Images/map-name-mirahq.jpg"></a>
+                <a href="MAPS.html"><img src="Images/map-name-airship.jpg"></a>
+                <span>Klikni pro zobrazení</span>
+            </div>
+
+            <div class="roles">
+                <h2 class="red">Speciální role</h2>
+                <div class="role">
+                    <img src="Images/icon-engineer.jpg">
+                    <p>
+                        <span class="red">Inženýr</span> má schopnost používat ventilace stejně jako podvodník, ale jenom párkrát a na omezenou dobu.
+                    </p>
+                </div>
+                <div class="role-reverse">
+                    <img src="Images/icon-shift.jpg">
+                    <p>
+                        <span class="red">Proměňovač</span> speciální role podvodníka umožňující převzít vzhled kolemdoujícího člena posádky.
+                    </p>
+                </div>
+                <div class="role">
+                    <img src="Images/icon-protect.jpg">
+                    <p>
+                        <span class="red">Anděl strážný</span> role ducha dovolující zachránit stále živého člena před podvodníkem.
+                    </p>
+                </div>
+                <div class="role-reverse">
+                    <img src="Images/icon-vitals.jpg">
+                    <p>
+                        <span class="red">Vědec</span> má k dispozici přenosný tablet, kde sleduje životní funkce svých kolegů. Je ale na baterky.
+                    </p>
+                </div>
+            </div>
+            <div>
+                <h2 class="red">Vymysli něco</h2>
             </div>
         </div>
+
 
 
         <!--
