--- a/A M O G U S/MAPS.html
+++ b/A M O G U S/MAPS.html
@@ -16,7 +16,6 @@
 
     <main>
         <div class="grid-container">
-
             <div class="grid-item">
                 <div class="grid-item-name">
                     <img src="Images/map-name-skeld.jpg">
@@ -25,7 +24,7 @@
             </div>
 
             <div class="grid-item">
-                <div class="grid-item-name">
+                <div class="grid-item-name right-alligned">
                     <img src="Images/map-name-airship.jpg">
                 </div>
                 <img src="Images/map-airship.jpg">
@@ -39,12 +38,11 @@
             </div>
 
             <div class="grid-item">
-                <div class="grid-item-name">
+                <div class="grid-item-name right-alligned">
                     <img src="Images/map-name-mirahq.jpg">
                 </div>
                 <img src="Images/map-mirahq.jpg">
             </div>
-
         </div>
     </main>
 </body>
