big chungus sus

--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -87,38 +87,17 @@
                     </p>
                 </div>
             </div>
-            <div>
-                <h2 class="red">Vymysli něco</h2>
+            <div class="benefits">
+                <h2 class="red">Benefity hraní Among us</h2>
+                <ul>
+                    <li>Vznik mnohočetné osobnosti</li>
+                    <li>Schopnost výborné dedukce</li>
+                    <li>Porozumění rozdílu mezi slovy argumenty a ambice</li>
+                    <li>Pochopení universa: <a href="LORE.html">[Sussiverse]</a></li>
+                    <li>Připojení do sekty AMOGŮ věřící v boha AMOGAS</li>
+                    <li>Nakažení nemoci <a href="GOD.html">[SUSTED]</a></li>
+                </ul>
             </div>
-        </div>
-
-
-
-        <!--
-        <div>
-            <h2>Benefity hraní Among us</h2>
-            <div>
-                <ul>Vznik mnohočetné osobnosti</ul>
-                <ul>Schopnost výborné dedukce</ul>
-                <ul>Porozumění rozdílu mezi slovy argumenty a ambice</ul>
-                <ul>Připojení do sekty AMOGŮ věřící v boha AMOGAS</ul>
-            </div>
-            <h2>Rizika hraní hry AMOGUS</h2>
-            <div>Nakažení velice nebezpečnou a zařím nevyléčitelnou nemoci SUSTED</div>
-            <h2>Symptomy nemoci [SUSTED]</h2>
-            <div>
-                Jedinec ukazuje prstem na vše a přitom řve: "S U S".
-                Jedincův strach se zvyšuje když je v kontaktu s červenou barvou.
-                Jedinec nepředvídatelně vykřikuje tato slovní spojení: "On se vetnul!", "To je SUS!", "Já nejsem SUS" a "Nemáš ambice!"
-            </div>
-            <p>
-                Pokud se vám podobá alespoň jediný syptom, nebo si nejste zcela jisti,
-                tak se prosím obraťte na svého doktora pro konzultaci. Pokud jste si všiml podobného chování ve Vašem okolí,
-                tak prosím neodkladně informujte polici, tato osoba je velice nebezpečná a nakažlivá, vyhýbejte se ji za kažkou cenu.
-            </p>
-        </div>
-        -->
-
     </main>
     <footer>
         <h2>Copyright 2023</h2>
