--- a/A M O G U S/GOD.html
+++ b/A M O G U S/GOD.html
@@ -4,9 +4,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="GOD.css">
-    <title>O Bohovi</title>
+    <title>O bohovi</title>
 </head>
 <body>
-    AHOJKY
+    <header>
+        <nav>
+            <a href="HOME.html"><img src="Images/LilAmogus.png"></a>
+        </nav>
+        <h1><pre>K  D  O     J  E     O  P  R  A  V  D  O  V  Ý       B  Ů  H</pre></h1>
+    </header>
+    <main>
+        <div>
+            <div>
+                <h1>BŮH AMOGŮ</h1>
+                <div class="god">
+                    <img src="Images/Godissus.jpg">
+                    <h3>Zafodus</h3>
+                    <p>Bůh má mnoho jmen, mezi nejznámější patří: 
+                        <span class="sus">SusGod</span>, <span class="sus">God of Sus</span>, 
+                        <span class="sus">AmoGod</span>, <span class="sus">S U S</span>,
+                        <span class="sus">Godus</span>, <span class="sus">Godissus</span>
+                        a z historie od vzniku Sussiverse taktéž nazývaný jako 
+                        <span class="sus">Medjed</span>. Někdy je také znán pod iniciály HH, zatím se ale nikomu nepovelo rozluštit pravou podobu jeho pravého jména.
+                        Nejčastěji nazýván jako Zafodus.
+                    </p>
+                </div>
+
+                <div class="powers">
+                    <img src="Images/susmantransfer.png">
+                    <h3>Zafodusovy síly</h3>
+                    <p>
+                        Zafodus je stvořitelem nákazy <span class="sus">SUSSED</span>. Dokáže nakazit <span class="sus">Susmana</span> (lidský obyčejný obyvatel Země),
+                        který se náhle promění na <span class="sus">Amoguse</span>. Tato proměna je nevratná a nezastavitelná. Jediným omezením je
+                        že jedinec musí alespoň jedenkrát odehrát hru Among us jako <span class="sus">impostor.</span> 
+                        Tato proměna zahrnuje jak tělesnou změnu, tak změnu v chování. Již proměněný jedinec není schopný 
+                        komunikovat bez zahrnutí slova <span class="sus">sus</span> do každé věty. Tyto bytosti již nežijí na Zemi ale na místě zvaném <span class="sus">Amgo</span>.
+                    </p>
+                </div>
+            </div>
+
+            <h1>Nemoc SUSSED</h1>
+            <div class="sussed">
+                <img src="Images/SUSSED.png">
+                <p>
+                    <span class="sus">Sussed</span> je nemoc stvořena bohem Zafodus. Jde o plyn s náhlým účinkem proměnit Susmana na Amogase. Proměnění jedinci si nestěžují, nýbrž právě uctívají a děkují bohovi za jejich vyproštění.
+                </p>
+                <ul>
+                    <li><span class="sus">Neustálé vracení se slova "sus":</span> Postižený jedinec bude neustále opakovat slovo "sus". Bez ohledu na situaci nebo kontext, toto slovo bude pravidelně vyslovováno bez jakékoli kontroly ze strany jedince.</li>
+                    <li><span class="sus">Fyzické změny:</span> Nemoc Sussed přináší také fyzické změny u postižených jedinců. Jejich obličej se může proměnit do podoby Amoguse, včetně charakteristické masky a výrazu.</li>
+                    <li><span class="sus">Podezřívavost a paranoia:</span> Nemoc Sussed může vyvolávat v postižených jedincích silnou podezřívavost a paranoidní chování. Budou podezírat ostatní z toho, že jsou také postiženi nemocí Sussed a budou se snažit odhalit skrytého "Amoguse" mezi nimi.</li>
+                    <li><span class="sus">Sociální izolace:</span> Vzhledem k těmto neobvyklým příznakům a změnám chování se postižení jedinci mohou cítit izolovaní od společnosti. Lidé se budou vyhýbat jejich přítomnosti kvůli nezvyklému chování spojenému s nemocí Sussed.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="commandments">
+            <h1>DESATERO PŘIKÁZÁNÍ</h1>
+            <div class="list">
+                <div>Bůh nikdy neplynuje, ikdyž je absolutně přeplynován!</div>
+                <div>Bůh si vždy po náročném dni dá Lidl zmrzlinu!</div>
+                <div>Bůh si vždycky najde čas k sebeuspokojení!</div>
+                <div>Božská špína mezi prsty je ta nejchutnější!</div>
+                <div>Božské ochlupení je vždy nejvoňavější!</div>
+                <div>Bohovy by se nikdy neprotrhla guma!</div>
+                <div>Božské svaly jsou ty nejobjemnější!</div>
+                <div>Bohovy nikdy nesmrdí chodidla!</div>
+                <div>Bůh nikdy nechodí Leg day!</div>
+                <div>Ben!</div>
+                <!--Pokud zbyde čas, tak udělat aby při najetí myši na jednotlivé 
+                    prvky se přehrál soubor mého hlasu opakující tuto větu :)-->
+            </div>
+        </div>
+    </main>
+    <footer>
+        <h2>Copyright 2023</h2>
+        <h2>Šimon Frőmel, 2.E</h2>
+    </footer>
 </body>
 </html>
+    <!--
+        <div>
+            <h2>Rizika hraní hry AMOGUS</h2>
+            <div>Nakažení velice nebezpečnou a zařím nevyléčitelnou nemoci SUSTED</div>
+            <h2>Symptomy nemoci [SUSTED]</h2>
+            <div>
+                Jedinec ukazuje prstem na vše a přitom řve: "S U S".
+                Jedincův strach se zvyšuje když je v kontaktu s červenou barvou.
+                Jedinec nepředvídatelně vykřikuje tato slovní spojení: "On se vetnul!", "To je SUS!", "Já nejsem SUS" a "Nemáš ambice!"
+            </div>
+            <p>
+                Pokud se vám podobá alespoň jediný syptom, nebo si nejste zcela jisti,
+                tak se prosím obraťte na svého doktora pro konzultaci. Pokud jste si všiml podobného chování ve Vašem okolí,
+                tak prosím neodkladně informujte polici, tato osoba je velice nebezpečná a nakažlivá, vyhýbejte se ji za kažkou cenu.
+            </p>
+        </div>
+    -->
