--- a/A M O G U S/HOME.html
+++ b/A M O G U S/HOME.html
@@ -13,8 +13,7 @@
     <main>
         <nav class="grid-container">
             <a href="GAME.html" class="tab">
-                <span>GAME INFO</span> <!--Informace o reálné hře postavy, role, cíl hry, mapy-->
-            </a>
+                <span>ABOUT THE GAME</span>
             <a href="GOD.html" class="tab">
                 <span>THEIR GOD</span> 
             </a>
