--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -94,14 +94,15 @@
                     <li>Schopnost výborné dedukce</li>
                     <li>Porozumění rozdílu mezi slovy argumenty a ambice</li>
                     <li>Pochopení universa: <a href="LORE.html">[Sussiverse]</a></li>
-                    <li>Připojení do sekty AMOGŮ věřící v boha AMOGAS</li>
-                    <li>Nakažení nemoci <a href="GOD.html">[SUSTED]</a></li>
+                    <li>Připojení do sekty AMOGŮ věřící v boha ZAFODUSE</li>
+                    <li>Nakažení nemoci <a href="GOD.html">[SUSSED]</a></li>
                 </ul>
             </div>
+        </div>
     </main>
     <footer>
         <h2>Copyright 2023</h2>
-        <h2>Šimon Frőmel, 2.E</h2>
+        <h2>Made by Šimon Frőmel, 2.E</h2>
     </footer>
 </body>
 </html>
