--- a/A M O G U S/GOD.html
+++ b/A M O G U S/GOD.html
@@ -14,50 +14,55 @@
         <h1><pre>K  D  O     J  E     O  P  R  A  V  D  O  V  Ý       B  Ů  H</pre></h1>
     </header>
     <main>
-        <div>
-            <div>
-                <h1>BŮH AMOGŮ</h1>
-                <div class="god">
-                    <img src="Images/Godissus.jpg">
-                    <h3>Zafodus</h3>
-                    <p>Bůh má mnoho jmen, mezi nejznámější patří: 
-                        <span class="sus">SusGod</span>, <span class="sus">God of Sus</span>, 
-                        <span class="sus">AmoGod</span>, <span class="sus">S U S</span>,
-                        <span class="sus">Godus</span>, <span class="sus">Godissus</span>
-                        a z historie od vzniku Sussiverse taktéž nazývaný jako 
-                        <span class="sus">Medjed</span>. Někdy je také znán pod iniciály HH, zatím se ale nikomu nepovelo rozluštit pravou podobu jeho pravého jména.
-                        Nejčastěji nazýván jako Zafodus.
-                    </p>
-                </div>
-
-                <div class="powers">
-                    <img src="Images/susmantransfer.png">
-                    <h3>Zafodusovy síly</h3>
-                    <p>
-                        Zafodus je stvořitelem nákazy <span class="sus">SUSSED</span>. Dokáže nakazit <span class="sus">Susmana</span> (lidský obyčejný obyvatel Země),
-                        který se náhle promění na <span class="sus">Amoguse</span>. Tato proměna je nevratná a nezastavitelná. Jediným omezením je
-                        že jedinec musí alespoň jedenkrát odehrát hru Among us jako <span class="sus">impostor.</span> 
-                        Tato proměna zahrnuje jak tělesnou změnu, tak změnu v chování. Již proměněný jedinec není schopný 
-                        komunikovat bez zahrnutí slova <span class="sus">sus</span> do každé věty. Tyto bytosti již nežijí na Zemi ale na místě zvaném <span class="sus">Amgo</span>.
-                    </p>
-                </div>
+        <div class="left-side">
+            <div class="god">
+                <h1>Bůh Amogů</h1>
+                <img src="Images/Godissus.jpg">
+                <h3>Zafodus</h3>
+                <p>Bůh má mnoho jmen, mezi nejznámější patří: 
+                    <span class="sus">SusGod</span>, <span class="sus">God of Sus</span>, 
+                    <span class="sus">AmoGod</span>, <span class="sus">S U S</span>,
+                    <span class="sus">Godus</span>, <span class="sus">Godissus</span>
+                    a z historie od vzniku Sussiverse taktéž nazývaný jako 
+                    <span class="sus">Medjed</span>. Někdy je také znán pod iniciály HH, zatím se ale nikomu nepovelo rozluštit co znamenají tyto iniciály.
+                    Nejčastěji ale nazýván jako <span class="sus">Zafodus</span>.
+                </p>
             </div>
 
-            <h1>Nemoc SUSSED</h1>
-            <div class="sussed">
-                <img src="Images/SUSSED.png">
+            <div class="powers">
+                <h1>Zafodusovy síly</h1>
+                <img src="Images/susmantransfer.png">
                 <p>
-                    <span class="sus">Sussed</span> je nemoc stvořena bohem Zafodus. Jde o plyn s náhlým účinkem proměnit Susmana na Amogase. Proměnění jedinci si nestěžují, nýbrž právě uctívají a děkují bohovi za jejich vyproštění.
+                    Zafodus je stvořitelem nákazy <span class="sus">SUSSED</span>. Dokáže nakazit <span class="sus">Susmana</span> (lidský obyčejný obyvatel Země),
+                    který se náhle promění na <span class="sus">Amoguse</span>. Tato proměna je nevratná a nezastavitelná. Jediným omezením je
+                    že jedinec musí alespoň jedenkrát odehrát hru Among us a někoho podezřívat. 
+                    Tato proměna zahrnuje jak tělesnou změnu, tak změnu v chování. Již proměněný jedinec není schopný 
+                    komunikovat bez zahrnutí slova <span class="sus">sus</span> do každé věty. Tyto bytosti již nežijí na Zemi ale na místě zvaném <span class="sus">Amgo</span>.
                 </p>
+            </div>
+            <div class="info">
+                <img src="Images/SUSSED.png">
+                <h1>Nákaza SUSSED</h1>
+                <p>
+                    <span class="sus">Sussed</span> je nemoc stvořena bohem Zafodus. Jde o plyn s náhlým účinkem proměnit Susmana na Amoguse. Je zvláštní že proměnění jedinci si nestěžují, nýbrž právě uctívají a děkují bohovi za jeho obrovskou velkorysost.
+                </p>
+            </div>
+            <div class="disease">
+                <h3>Chování způsobené nákazou SUSSED</h3>
                 <ul>
-                    <li><span class="sus">Neustálé vracení se slova "sus":</span> Postižený jedinec bude neustále opakovat slovo "sus". Bez ohledu na situaci nebo kontext, toto slovo bude pravidelně vyslovováno bez jakékoli kontroly ze strany jedince.</li>
-                    <li><span class="sus">Fyzické změny:</span> Nemoc Sussed přináší také fyzické změny u postižených jedinců. Jejich obličej se může proměnit do podoby Amoguse, včetně charakteristické masky a výrazu.</li>
-                    <li><span class="sus">Podezřívavost a paranoia:</span> Nemoc Sussed může vyvolávat v postižených jedincích silnou podezřívavost a paranoidní chování. Budou podezírat ostatní z toho, že jsou také postiženi nemocí Sussed a budou se snažit odhalit skrytého "Amoguse" mezi nimi.</li>
-                    <li><span class="sus">Sociální izolace:</span> Vzhledem k těmto neobvyklým příznakům a změnám chování se postižení jedinci mohou cítit izolovaní od společnosti. Lidé se budou vyhýbat jejich přítomnosti kvůli nezvyklému chování spojenému s nemocí Sussed.</li>
+                    <li>Jedinec na vše ukazuje prstem a přitom řve: <span class="sus">"S U S"</span></li>
+                    <li>Jedinec trpí paranojou. Podle informací vidí ve všem <span class="sus">tvary Amoguse</span></li>
+                    <li>Jedinec nepředvídatelně vykřikuje tato slovní spojení: "<span class="sus">On se vetnul!</span>", "<span class="sus">To je SUS!</span>" "<span class="sus">Já nejsem SUS!</span>" "<span class="sus">Nemáš ambice!</span>"</li>
                 </ul>
             </div>
+            <div class="behavior">
+                <h3>Jak se chránit a co dělat</h3>
+                <p class="sus">Nehrát Among Us ... ano to je sus</p>
+                <p>Pokud u sebe nacházíte podobné chování, tak prosím neodkladně kontaktuje policii (doktor vám již nepomůže). Udělejte to aspoň pro své známé!</p>
+                <p>Pokud si všimnete někoho kdo kolem sebe vyvolává podobné chování, tak se mu prosím nesnažte pomoc a raději si držte odstup od jedince a kontaktujte policii.</p>
+            </div>
         </div>
-        <div class="commandments">
+        <div>
             <h1>DESATERO PŘIKÁZÁNÍ</h1>
             <div class="list">
                 <div>Bůh nikdy neplynuje, ikdyž je absolutně přeplynován!</div>
@@ -77,7 +82,7 @@
     </main>
     <footer>
         <h2>Copyright 2023</h2>
-        <h2>Šimon Frőmel, 2.E</h2>
+        <h2>Made by Šimon Frőmel, 2.E</h2>
     </footer>
 </body>
 </html>
