--- a/A M O G U S/HOME.html
+++ b/A M O G U S/HOME.html
@@ -33,7 +33,7 @@
     </main>
     <footer>
         <h2>Copyright 2023</h2>
-        <h2>Šimon Frőmel, 2.E</h2>
+        <h2>Made by Šimon Frőmel, 2.E</h2>
     </footer>
 </body>
 </html>
