--- a/A M O G U S/IMPOSTOR.html
+++ b/A M O G U S/IMPOSTOR.html
@@ -13,10 +13,9 @@
         </nav>
         <h1><pre>I  M  P  O  S  T  O  R      D  E  T  E  C  T  O  R</pre></h1>
     </header>
-<!--129 je susácký 21 je prvnní a poslední je 445-->
     <main>
         <div class="text">
-            <h2>Kontext příběhu</h2>
+            <h2>Úvod do příběhu</h2>
             <p>
                 Našlo se tělo u reaktoru, a teď se hledá kdo je vrahem.
                 Někdo vykřikl tvoje jméno a protože nikdo nic neví, tak jsou najednou všichni proti tobě. 
@@ -476,7 +475,7 @@
 
     <footer>
         <h2>Copyright 2023</h2>
-        <h2>Šimon Frőmel, 2.E</h2>
+        <h2>Made by Šimon Frőmel, 2.E</h2>
     </footer>
 </body>
 </html>
