big changes sus

--- a/A M O G U S/GOD.html
+++ b/A M O G U S/GOD.html
@@ -16,7 +16,7 @@
     <main>
         <div class="left-side">
             <div class="god">
-                <h1>Bůh Amogů</h1>
+                <h2>Bůh Amogů</h1>
                 <img src="Images/Godissus.jpg">
                 <h3>Zafodus</h3>
                 <p>Bůh má mnoho jmen, mezi nejznámější patří: 
@@ -30,7 +30,7 @@
             </div>
 
             <div class="powers">
-                <h1>Zafodusovy síly</h1>
+                <h2>Zafodusovy síly</h2>
                 <img src="Images/susmantransfer.png">
                 <p>
                     Zafodus je stvořitelem nákazy <span class="sus">SUSSED</span>. Dokáže nakazit <span class="sus">Susmana</span> (lidský obyčejný obyvatel Země),
@@ -42,27 +42,27 @@
             </div>
             <div class="info">
                 <img src="Images/SUSSED.png">
-                <h1>Nákaza SUSSED</h1>
+                <h2>Nákaza SUSSED</h2>
                 <p>
                     <span class="sus">Sussed</span> je nemoc stvořena bohem Zafodus. Jde o plyn s náhlým účinkem proměnit Susmana na Amoguse. Je zvláštní že proměnění jedinci si nestěžují, nýbrž právě uctívají a děkují bohovi za jeho obrovskou velkorysost.
                 </p>
             </div>
             <div class="disease">
-                <h3>Chování způsobené nákazou SUSSED</h3>
+                <h2>Chování způsobené nákazou SUSSED</h2>
                 <ul>
                     <li>Jedinec na vše ukazuje prstem a přitom řve: <span class="sus">"S U S"</span></li>
                     <li>Jedinec trpí paranojou. Podle informací vidí ve všem <span class="sus">tvary Amoguse</span></li>
-                    <li>Jedinec nepředvídatelně vykřikuje tato slovní spojení: "<span class="sus">On se vetnul!</span>", "<span class="sus">To je SUS!</span>" "<span class="sus">Já nejsem SUS!</span>" "<span class="sus">Nemáš ambice!</span>"</li>
+                    <li>Jedinec nepředvídatelně vykřikuje tato slovní spojení: "<span class="sus">On se ventnul!</span>", "<span class="sus">To je SUS!</span>" "<span class="sus">Já nejsem SUS!</span>" "<span class="sus">Nemáš ambice!</span>"</li>
                 </ul>
             </div>
             <div class="behavior">
-                <h3>Jak se chránit a co dělat</h3>
-                <p class="sus">Nehrát Among Us ... ano to je sus</p>
-                <p>Pokud u sebe nacházíte podobné chování, tak prosím neodkladně kontaktuje policii (doktor vám již nepomůže). Udělejte to aspoň pro své známé!</p>
-                <p>Pokud si všimnete někoho kdo kolem sebe vyvolává podobné chování, tak se mu prosím nesnažte pomoc a raději si držte odstup od jedince a kontaktujte policii.</p>
+                <h2>Jak se chránit a co dělat</h2>
+                <p class="sus">Jediná prevence je ... se vyhýbat sus lidem</p>
+                <p>Pokud u sebe nacházíte podobné chování, tak prosím neodkladně kontaktuje policii (doktor vám již nepomůže).</p>
+                <p>Pokud si všimnete někoho kdo kolem sebe vyvolává podobné chování, tak se mu prosím nesnažte pomoc a raději si držte odstup od jedince a kontaktujte neodkladně policii.</p>
             </div>
         </div>
-        <div>
+        <div class="right-side">
             <h1>DESATERO PŘIKÁZÁNÍ</h1>
             <div class="list">
                 <div>Bůh nikdy neplynuje, ikdyž je absolutně přeplynován!</div>
@@ -86,20 +86,3 @@
     </footer>
 </body>
 </html>
-    <!--
-        <div>
-            <h2>Rizika hraní hry AMOGUS</h2>
-            <div>Nakažení velice nebezpečnou a zařím nevyléčitelnou nemoci SUSTED</div>
-            <h2>Symptomy nemoci [SUSTED]</h2>
-            <div>
-                Jedinec ukazuje prstem na vše a přitom řve: "S U S".
-                Jedincův strach se zvyšuje když je v kontaktu s červenou barvou.
-                Jedinec nepředvídatelně vykřikuje tato slovní spojení: "On se vetnul!", "To je SUS!", "Já nejsem SUS" a "Nemáš ambice!"
-            </div>
-            <p>
-                Pokud se vám podobá alespoň jediný syptom, nebo si nejste zcela jisti,
-                tak se prosím obraťte na svého doktora pro konzultaci. Pokud jste si všiml podobného chování ve Vašem okolí,
-                tak prosím neodkladně informujte polici, tato osoba je velice nebezpečná a nakažlivá, vyhýbejte se ji za kažkou cenu.
-            </p>
-        </div>
-    -->
