--- a/A M O G U S/HOME.html
+++ b/A M O G U S/HOME.html
@@ -11,7 +11,7 @@
         <h1><pre>A      M      O      N      G      U      S</pre></h1>
     </header>
     <main>
-        <nav class="grid-container">
+        <nav>
             <a href="GAME.html" class="tab">
                 <span>ABOUT THE GAME</span>
             <a href="GOD.html" class="tab">
