--- a/A M O G U S/IMPOSTOR.html
+++ b/A M O G U S/IMPOSTOR.html
@@ -14,29 +14,36 @@
         <h1><pre>I  M  P  O  S  T  O  R      D  E  T  E  C  T  O  R</pre></h1>
     </header>
     <main>
-        <div class="text">
-            <h2>Úvod do příběhu</h2>
-            <p>
-                Našlo se tělo u reaktoru, a teď se hledá kdo je vrahem.
-                Někdo vykřikl tvoje jméno a protože nikdo nic neví, tak jsou najednou všichni proti tobě. 
-                Tvoje smůla že sis nevšiml kdo tě tak hořce nařkl, když si přece celou dobu byl tak poslušný člen posádky a plnil svoje úkoly.
-                Ve své mysli seš si jist že to byl právě on, ten který tě tak nařkl.
-                Udržuješ si chladnou hlavu, i přes to že tě za pár sekund, kdy se povolí hlasování, tě odhlasují do kosmu.
-                Před začátkem hlasování se ti však podaří všechny uklidnit a říct že dokážeš rozeznat kdo je tady podvodníkem pouhým pohledem. 
-                Zmiňuješ také že v případě omylu za to zaplatíš veškerým přístupem ke kyslíku.
-                Moc lidí ti sice na začátku nevěří, ale postupně si uvědomují že poslouchají pouhý nepodložený výkřik.
-                Jsi ve stavu kdy svým prstem rozhodneš, kdo skončí v temné nekonečnosti vesmíru.
-            </p>
-            <h2>Popis hry</h2>
-            <p>
-                <span>Máš pouze jeden pokus</span>, protože více životu nemáš...
-                Klikni myší na toho podvodníka, který ti připadá nejvíce podezřelý MEZI NÁMA
-            </p>
+        <div class="banner">
+            <img src="Images/EmergencyMeeting.jpg">
+            <p>Červenej svolal <br>MEETING</p>
+        </div>
+        <div>
+            <div class="lore">
+                <h2>Co se stalo [Lore]</h2>
+                <p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Našlo se tělo u reaktoru, a teď se hledá kdo je vrahem.
+                    Někdo vykřikl tvoje jméno a protože nikdo nic neví, tak jsou najednou všichni proti tobě. 
+                    Tvoje smůla že sis nevšiml kdo tě tak hořce nařkl, když si přece celou dobu byl tak poslušný člen posádky a plnil svoje úkoly.
+                    Ve své mysli seš si jist že to byl právě on, ten červený, ten který tě tak nařkl ten v červeným kostýmu.
+                    Udržuješ si chladnou hlavu, i přes to že tě za pár sekund, kdy se povolí hlasování, tě odhlasují do kosmu.
+                    Před začátkem hlasování se ti však podaří všechny uklidnit a říct že dokážeš rozeznat kdo je tady podvodníkem pouhým pohledem. 
+                    Oznamuješ také že v případě omylu za to zaplatíš veškerým přístupem ke kyslíku.
+                    Moc lidí ti sice na začátku nevěří, ale postupně si uvědomují že poslouchají pouhé nepodložené výkřiky.
+                    <br><br>Jsi ve stavu kdy svým prstem rozhodneš, kdo skončí v temné nekonečnosti vesmíru.
+                </p>
+            </div>
+            <div class="how-to">
+                <h2>Jak hrát</h2>
+                <p>
+                    Níže v obrázku klikni na Amogase, který jaksi sus vyčnívá z řady...
+                </p>
+            </div>
         </div>
         <div class="background">
             <img src="Images/IMPOSTOR_test.jpg">
             <div class="overlap">
-                <div class="grid-container"> <!--38 až 462. 146 je sus. -->
+                <div class="grid-container"> <!--47 až 477. 155 je sus. -->
                     <a href="IMPOSTOR_FALSE.html" target="blank" ></a>
                     <a></a>
                     <a href="IMPOSTOR_FALSE.html" target="blank" ></a>
